--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
+    "jade": "^0.29.0",
+    "mongoose": "^7.3.1",
     "morgan": "~1.9.1"
   }
 }
